--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
 	<head>
 		<title>INTERNAL ASSESSMENT</title>
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<h1>Mathematics Internal Assessment</h1>
+		<h2>Tower of Hanoi 3-D model for 4-rods 3-disks format</h2>
 		<img src="image.gif" alt="" width="100%">
+		<br>
+		<br>
+		<h2>Tower of Hanoi 3-D model for 5-rods 3-disks format</h2>
+		<img src="image2.gif" alt="" width="100%">
+		<br>
+		<br>
+		<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a>
 	</body>
-</html>
+</html>	
